--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <body>
 <script>
     function FaceBookLogin() {
-        var ref = new Firebase("https://team-red.firebaseio.com");
+        var ref = new Firebase("https://team-red.firebaseio.com/queue/tasks");
         ref.authWithOAuthRedirect("facebook", function(error) {
             if (error) {
                 console.log("Login Failed!", error);
@@ -20,9 +20,9 @@
                 // We'll never get here, as the page will redirect on success.
             }
         });
-       // return ref;
+        ref.push({'foo': 'bar'});
     }
-    function PushtoQueue(){
+    function PushtoQueue(ref){
         ref.push({'foo': 'bar'});
     }
 </script>
