--- a/about.html
+++ b/about.html
@@ -6,33 +6,39 @@
     <title>Employifai</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
-
 </head>
 
 <body>
-<script>
-    function FaceBookLogin() {
-        ref = new Firebase("https://team-red.firebaseio.com/queue");
-        ref.authWithOAuthRedirect("facebook", function(error) {
-            if (error) {
-                console.log("Login Failed!", error);
-            } else {
-                // We'll never get here, as the page will redirect on success.
-            }
-        });
-        
-        ref.push({'foo': 'bar'});
-        // return ref;
-    }
-    function PushtoQueue(){
-        console.log("ref=" +ref);
-        ref.push({'foo': 'bar'});
-    }
-</script>
 <h1>Employifai</h1>
 <h2>The Facebook Cleanser</h2>
 <p>Click here to get rid of all bad photos on Facebook.</p>
-<p><button class="button" onclick="FaceBookLogin()">Login</button></p>
-<p><button class="button" onclick="">Run</button></p>
+<p><button class="button" id="login">Login</button></p>
+<p><button class="button" id="run">Run</button></p>
+<p id="output"></p>
+//if resolve pull from firease/queue/tasks
+<script>
+
+    function FaceBookLogin() {
+        var ref = new Firebase("https://team-red.firebaseio.com/queue/tasks");
+//        ref.authWithOAuthRedirect("facebook", function(error) {
+//            if (error) {
+//                console.log("Login Failed!", error);
+//            } else {
+//                // We'll never get here, as the page will redirect on success.
+//            }
+//        });
+
+        result = ref.push({'foo': 'bar'});
+        result.child("result").on("value", function (snap) {
+            if (!snap.val()) return;
+
+            document.querySelector("#output").innerHTML = snap.val().bad[0];
+            document.querySelector("#output").innerHTML = snap.val().bad[0];
+        });
+        // return ref;
+    }
+
+    document.querySelector("#login").onclick = FaceBookLogin
+</script>
 </body>
 </html>
