--- a/about.html
+++ b/about.html
@@ -32,9 +32,12 @@
         result.child("result").on("value", function (snap) {
             if (!snap.val()) return;
 
-            document.querySelector("#output").innerHTML = snap.val().bad[0];
-            document.querySelector("#output").innerHTML = snap.val().bad[0];
+            //document.querySelector("#output").innerHTML = snap.val().bad[0];
+            //document.querySelector("#output").innerHTML = snap.val().bad[0];
+            document.querySelector("#output").innerHTML = '<img src="http://www.w3schools.com/images/w3schools_green.jpg" alt="W3Schools.com">';
+            document.querySelector("#output").innerHTML += '<p>fuck.me</p>';
         });
+        ref.remove();
         // return ref;
     }
 
