--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <p>Click here to get rid of all bad photos on Facebook.</p>
 <p><button class="button" id="login">Login</button></p>
 <p><button class="button" id="run">Run</button></p>
-<p id="output"></p>
+<div id="output"></div>
 //if resolve pull from firease/queue/tasks
 <script>
 
@@ -34,10 +34,11 @@
 
             //document.querySelector("#output").innerHTML = snap.val().bad[0];
             //document.querySelector("#output").innerHTML = snap.val().bad[0];
-            document.querySelector("#output").innerHTML = '<img src="http://www.w3schools.com/images/w3schools_green.jpg" alt="W3Schools.com">';
-            document.querySelector("#output").innerHTML += '<p>fuck.me</p>';
+            //if()
+            document.querySelector("#output").innerHTML = '<p class="stack"><img src="http://www.w3schools.com/images/w3schools_green.jpg" alt="W3Schools.com"></p>';
+            document.querySelector("#output").innerHTML += '<p class="stack"><img src="https://scontent.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/12508810_10208635411586437_8162708858364444974_n.jpg?oh=b55d48a05b17f6e626b29e1ee948658e&oe=57700588" alt="image1"></p>';
         });
-        ref.remove();
+
         // return ref;
     }
 
