--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-//firebase SDK
+<!-- //firebase SDK -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,12 +11,20 @@
 <body>
 <h1>Employifai</h1>
 <h2>The Facebook Cleanser</h2>
-<p>Click here to get rid of all bad photos on Facebook.</p>
+<p>Employifai uses the 
+    <span><a href="http://www.clarifai.com/">Clarifai</a></span>
+    <span>API and your facebook to alert you of any inappropriate photos that would make you un-employable.</span>
+</p>
 <p><button class="button" id="login">Login</button></p>
-<p><button class="button" id="run">Run</button></p>
+<!-- <p><button class="hidden button" id="run">Run</button></p> -->
 <div id="output"></div>
-//if resolve pull from firease/queue/tasks
+<!-- //if resolve pull from firease/queue/tasks -->
 <script>
+
+    document.getElementById('login').addEventListener('click', function(){
+        document.getElementById('login').className = 'hidden button';
+        // document.getElementById('run').className = 'button';
+    });
 
     function FaceBookLogin() {
         var ref = new Firebase("https://team-red.firebaseio.com/queue/tasks");
@@ -30,42 +38,42 @@
 
         result = ref.push({'foo': 'bar'});
         result.child("result").on("value", function (snap) {
-            var bad = ["http://www.w3schools.com/images/w3schools_green.jpg", "https://scontent.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/12508810_10208635411586437_8162708858364444974_n.jpg?oh=b55d48a05b17f6e626b29e1ee948658e&oe=57700588"];
+            var bad = ["http://www.w3schools.com/images/w3schools_green.jpg", "https://scontent.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/12508810_10208635411586437_8162708858364444974_n.jpg?oh=b55d48a05b17f6e626b29e1ee948658e&oe=57700588", "http://www.w3schools.com/images/w3schools_green.jpg", "http://www.w3schools.com/images/w3schools_green.jpg", "http://www.w3schools.com/images/w3schools_green.jpg", "http://www.w3schools.com/images/w3schools_green.jpg", "http://www.w3schools.com/images/w3schools_green.jpg", "http://www.w3schools.com/images/w3schools_green.jpg", "http://www.w3schools.com/images/w3schools_green.jpg", "http://www.w3schools.com/images/w3schools_green.jpg"];
             var medium= ["http://www.w3schools.com/images/w3schools_green.jpg", "https://scontent.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/12508810_10208635411586437_8162708858364444974_n.jpg?oh=b55d48a05b17f6e626b29e1ee948658e&oe=57700588"];
             var low = ["https://scontent.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/12508810_10208635411586437_8162708858364444974_n.jpg?oh=b55d48a05b17f6e626b29e1ee948658e&oe=57700588"];
 
             if (!snap.val()) return;
-            document.querySelector("#output").innerHTML += 'Results';
+            document.querySelector("#output").innerHTML += '<h3>Results</h3>';
             if (bad.length>0){
-                document.querySelector("#output").innerHTML += '<div class="high">';
-                document.querySelector("#output").innerHTML += '<h3>High</h3>';
+                document.querySelector("#output").innerHTML += '<div class="high"></div>';
+                document.querySelector(".high").innerHTML += '<h3>High</h3>';
                 for (var i = 0; i < bad.length; i++) {
-                    document.querySelector("#output").innerHTML += '<p class="stack"><img src='+bad[i]+' alt="W3Schools.com" style="width:42px;height:42px;border:0;"></p>';
+                    document.querySelector(".high").innerHTML += '<p class="stack-high"><img src='+bad[i]+' alt="W3Schools.com" style="width:175px;height:175px;"></p>';
                     //document.querySelector("#output").innerHTML += ;
                   // document.querySelector("#output").innerHTML += ;
 
                 }
-            document.querySelector("#output").innerHTML += '</div>';
+            // document.querySelector("#output").innerHTML += '</div>';
         }
             if (medium.length>0){
-                document.querySelector("#output").innerHTML += '<div class="medium">';
-                document.querySelector("#output").innerHTML += '<h3>Medium</h3>';
+                document.querySelector("#output").innerHTML += '<div class="medium"></div>';
+                document.querySelector(".medium").innerHTML += '<h3>Medium</h3>';
                 for (var i = 0; i < medium.length; i++) {
-                    document.querySelector("#output").innerHTML += '<p class="stack"><img src='+medium[i]+' alt="W3Schools.com" style="width:42px;height:42px;border:0;"></p>';
+                    document.querySelector(".medium").innerHTML += '<p class="stack-med"><img src='+medium[i]+' alt="W3Schools.com" style="width:175px;height:175px;"></p>';
 
 
                 }
-                document.querySelector("#output").innerHTML += '</div>';
+                // document.querySelector("#output").innerHTML += '</div>';
             }
             if (low.length>0){
-                document.querySelector("#output").innerHTML += '<div class="low">';
-                document.querySelector("#output").innerHTML += '<h3>Low</h3>';
+                document.querySelector("#output").innerHTML += '<div class="low"></div>';
+                document.querySelector(".low").innerHTML += '<h3>Low</h3>';
                 for (var i = 0; i < low.length; i++) {
-                    document.querySelector("#output").innerHTML += '<p class="stack"><img src='+low[i]+' alt="W3Schools.com" style="width:42px;height:42px;border:0;"></p>';
+                    document.querySelector(".low").innerHTML += '<p class="stack-low"><img src='+low[i]+' alt="W3Schools.com" style="width:175px;height:175px;"></p>';
 
 
                 }
-                document.querySelector("#output").innerHTML += '</div>';
+                // document.querySelector("#output").innerHTML += '</div>';
             }
 
 
