"Almost Finished HTML"

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
             // document.querySelector("#output").innerHTML += '<p class="stack"><img src=snap.val().high[0] alt="image1" style="width:42px;height:42px;border:0;"></p>';
             // }
         });
-      ref.remove();
+      //ref.remove();
     })
 
     function FaceBookLogin() {
