"Improved Css again and again and again and again and again  and again"

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
             for (var i = 0; i < bad.length; i++) {
                 linkss=bad[i]['link'];
                 urls=bad[i]['url'];
-                document.querySelector(".high").innerHTML += '<p class="stack-high"><a href='+linkss+'><img src='+urls+' alt="W3Schools.com" style=></a></p>';
+                document.querySelector(".high").innerHTML += '<p class="stack-high"><a class="pic" href='+linkss+'><img src='+urls+' alt="W3Schools.com" style=></a></p>';
                 //document.querySelector("#output").innerHTML += ;
                 // document.querySelector("#output").innerHTML += ;
 
@@ -86,7 +86,7 @@
               linkss=medium[i]['link'];
               urls=medium[i]['url'];
                 console.log(medium[i]);
-                document.querySelector(".medium").innerHTML += '<p class="stack-med"><a href='+linkss+'><img src='+urls+' alt="W3Schools.com" style=></a></p>';
+                document.querySelector(".medium").innerHTML += '<p class="stack-med"><a class="pic" href='+linkss+'><img src='+urls+' alt="W3Schools.com" style=></a></p>';
                   console.log(bad);
             }
             // document.querySelector("#output").innerHTML += '</div>';
