"Improved Css again and again and again and again and again  and again"

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
         if (!snap.val()) return;
         if(bad[0]['url']==0 && medium[0]['url']==0 ) {
             document.querySelector("#run").innerHTML = '<a href="#res">Congrats</a>';
-            document.querySelector("#output").innerHTML += '<h3 class=res id=res>No Results Found!</h3>';
+            document.querySelector("#output").innerHTML += '<h3 class=res2 id=res>No Results Found!</h3>';
         }
         else{
             document.querySelector("#run").innerHTML = '<a href="#res">See Results</a>';
